@@ -293,7 +293,7 @@ int Atari_Keyboard(void)
 	if (key_shift)
 		shiftctrl ^= AKEY_SHFT;
 
-	if (machine_type == MACHINE_5200 && !ui_is_active) {
+	if (machine_type == MACHINE_5200 && !ui_is_active && lastloc == KEY_LOCATION_STANDARD) {
 		if (lastkey == VK_F4)
 			return AKEY_5200_START ^ shiftctrl;
 		switch (lastuni) {
@@ -395,7 +395,7 @@ int Atari_Keyboard(void)
 	}
 
 	/* Handle CTRL-0 to CTRL-9 */
-	if (key_control) {
+	if (key_control && lastloc == KEY_LOCATION_STANDARD) {
 		switch(lastuni) {
 		case '.':
 			return AKEY_FULLSTOP | AKEY_CTRL;
@@ -404,7 +404,6 @@ int Atari_Keyboard(void)
 		case ';':
 			return AKEY_SEMICOLON | AKEY_CTRL;
 		}
-		if(lastloc == KEY_LOCATION_STANDARD) {
 		switch (lastkey) {
 		case VK_0:
 			return AKEY_CTRL_0;
@@ -427,7 +426,6 @@ int Atari_Keyboard(void)
 		case VK_9:
 			return AKEY_CTRL_9;
 		}
-		}
 	}
 
 	/* Host Caps Lock will make lastuni switch case, so prevent this*/
@@ -435,239 +433,241 @@ int Atari_Keyboard(void)
     if(lastuni>='a' && lastuni <= 'z' && key_shift) lastuni -= 0x20;
 	/* Uses only UNICODE translation, no shift states (this was added to
 	 * support non-US keyboard layouts)*/
-	switch (lastuni) {
-	case 1:
-		return AKEY_CTRL_a;
-	case 2:
-		return AKEY_CTRL_b;
-	case 3:
-		return AKEY_CTRL_c;
-	case 4:
-		return AKEY_CTRL_d;
-	case 5:
-		return AKEY_CTRL_e;
-	case 6:
-		return AKEY_CTRL_f;
-	case 7:
-		return AKEY_CTRL_g;
-	case 8:
-		return AKEY_CTRL_h;
-	case 9:
-		return AKEY_CTRL_i;
-	case 10:
-		return AKEY_CTRL_j;
-	case 11:
-		return AKEY_CTRL_k;
-	case 12:
-		return AKEY_CTRL_l;
-	case 13:
-		return AKEY_CTRL_m;
-	case 14:
-		return AKEY_CTRL_n;
-	case 15:
-		return AKEY_CTRL_o;
-	case 16:
-		return AKEY_CTRL_p;
-	case 17:
-		return AKEY_CTRL_q;
-	case 18:
-		return AKEY_CTRL_r;
-	case 19:
-		return AKEY_CTRL_s;
-	case 20:
-		return AKEY_CTRL_t;
-	case 21:
-		return AKEY_CTRL_u;
-	case 22:
-		return AKEY_CTRL_v;
-	case 23:
-		return AKEY_CTRL_w;
-	case 24:
-		return AKEY_CTRL_x;
-	case 25:
-		return AKEY_CTRL_y;
-	case 26:
-		return AKEY_CTRL_z;
-	case 'A':
-		return AKEY_A;
-	case 'B':
-		return AKEY_B;
-	case 'C':
-		return AKEY_C;
-	case 'D':
-		return AKEY_D;
-	case 'E':
-		return AKEY_E;
-	case 'F':
-		return AKEY_F;
-	case 'G':
-		return AKEY_G;
-	case 'H':
-		return AKEY_H;
-	case 'I':
-		return AKEY_I;
-	case 'J':
-		return AKEY_J;
-	case 'K':
-		return AKEY_K;
-	case 'L':
-		return AKEY_L;
-	case 'M':
-		return AKEY_M;
-	case 'N':
-		return AKEY_N;
-	case 'O':
-		return AKEY_O;
-	case 'P':
-		return AKEY_P;
-	case 'Q':
-		return AKEY_Q;
-	case 'R':
-		return AKEY_R;
-	case 'S':
-		return AKEY_S;
-	case 'T':
-		return AKEY_T;
-	case 'U':
-		return AKEY_U;
-	case 'V':
-		return AKEY_V;
-	case 'W':
-		return AKEY_W;
-	case 'X':
-		return AKEY_X;
-	case 'Y':
-		return AKEY_Y;
-	case 'Z':
-		return AKEY_Z;
-	case ':':
-		return AKEY_COLON;
-	case '!':
-		return AKEY_EXCLAMATION;
-	case '@':
-		return AKEY_AT;
-	case '#':
-		return AKEY_HASH;
-	case '$':
-		return AKEY_DOLLAR;
-	case '%':
-		return AKEY_PERCENT;
-	case '^':
-		return AKEY_CARET;
-	case '&':
-		return AKEY_AMPERSAND;
-	case '*':
-		return AKEY_ASTERISK;
-	case '(':
-		return AKEY_PARENLEFT;
-	case ')':
-		return AKEY_PARENRIGHT;
-	case '+':
-		return AKEY_PLUS;
-	case '_':
-		return AKEY_UNDERSCORE;
-	case '"':
-		return AKEY_DBLQUOTE;
-	case '?':
-		return AKEY_QUESTION;
-	case '<':
-		return AKEY_LESS;
-	case '>':
-		return AKEY_GREATER;
-	case 'a':
-		return AKEY_a;
-	case 'b':
-		return AKEY_b;
-	case 'c':
-		return AKEY_c;
-	case 'd':
-		return AKEY_d;
-	case 'e':
-		return AKEY_e;
-	case 'f':
-		return AKEY_f;
-	case 'g':
-		return AKEY_g;
-	case 'h':
-		return AKEY_h;
-	case 'i':
-		return AKEY_i;
-	case 'j':
-		return AKEY_j;
-	case 'k':
-		return AKEY_k;
-	case 'l':
-		return AKEY_l;
-	case 'm':
-		return AKEY_m;
-	case 'n':
-		return AKEY_n;
-	case 'o':
-		return AKEY_o;
-	case 'p':
-		return AKEY_p;
-	case 'q':
-		return AKEY_q;
-	case 'r':
-		return AKEY_r;
-	case 's':
-		return AKEY_s;
-	case 't':
-		return AKEY_t;
-	case 'u':
-		return AKEY_u;
-	case 'v':
-		return AKEY_v;
-	case 'w':
-		return AKEY_w;
-	case 'x':
-		return AKEY_x;
-	case 'y':
-		return AKEY_y;
-	case 'z':
-		return AKEY_z;
-	case ';':
-		return AKEY_SEMICOLON;
-	case '0':
-		return AKEY_0;
-	case '1':
-		return AKEY_1;
-	case '2':
-		return AKEY_2;
-	case '3':
-		return AKEY_3;
-	case '4':
-		return AKEY_4;
-	case '5':
-		return AKEY_5;
-	case '6':
-		return AKEY_6;
-	case '7':
-		return AKEY_7;
-	case '8':
-		return AKEY_8;
-	case '9':
-		return AKEY_9;
-	case ',':
-		return AKEY_COMMA;
-	case '.':
-		return AKEY_FULLSTOP;
-	case '=':
-		return AKEY_EQUAL;
-	case '-':
-		return AKEY_MINUS;
-	case '\'':
-		return AKEY_QUOTE;
-	case '/':
-		return AKEY_SLASH;
-	case '\\':
-		return AKEY_BACKSLASH;
-	case '[':
-		return AKEY_BRACKETLEFT;
-	case ']':
-		return AKEY_BRACKETRIGHT;
-	case '|':
-		return AKEY_BAR;
+	if (lastloc == KEY_LOCATION_STANDARD) {
+		switch (lastuni) {
+		case 1:
+			return AKEY_CTRL_a;
+		case 2:
+			return AKEY_CTRL_b;
+		case 3:
+			return AKEY_CTRL_c;
+		case 4:
+			return AKEY_CTRL_d;
+		case 5:
+			return AKEY_CTRL_e;
+		case 6:
+			return AKEY_CTRL_f;
+		case 7:
+			return AKEY_CTRL_g;
+		case 8:
+			return AKEY_CTRL_h;
+		case 9:
+			return AKEY_CTRL_i;
+		case 10:
+			return AKEY_CTRL_j;
+		case 11:
+			return AKEY_CTRL_k;
+		case 12:
+			return AKEY_CTRL_l;
+		case 13:
+			return AKEY_CTRL_m;
+		case 14:
+			return AKEY_CTRL_n;
+		case 15:
+			return AKEY_CTRL_o;
+		case 16:
+			return AKEY_CTRL_p;
+		case 17:
+			return AKEY_CTRL_q;
+		case 18:
+			return AKEY_CTRL_r;
+		case 19:
+			return AKEY_CTRL_s;
+		case 20:
+			return AKEY_CTRL_t;
+		case 21:
+			return AKEY_CTRL_u;
+		case 22:
+			return AKEY_CTRL_v;
+		case 23:
+			return AKEY_CTRL_w;
+		case 24:
+			return AKEY_CTRL_x;
+		case 25:
+			return AKEY_CTRL_y;
+		case 26:
+			return AKEY_CTRL_z;
+		case 'A':
+			return AKEY_A;
+		case 'B':
+			return AKEY_B;
+		case 'C':
+			return AKEY_C;
+		case 'D':
+			return AKEY_D;
+		case 'E':
+			return AKEY_E;
+		case 'F':
+			return AKEY_F;
+		case 'G':
+			return AKEY_G;
+		case 'H':
+			return AKEY_H;
+		case 'I':
+			return AKEY_I;
+		case 'J':
+			return AKEY_J;
+		case 'K':
+			return AKEY_K;
+		case 'L':
+			return AKEY_L;
+		case 'M':
+			return AKEY_M;
+		case 'N':
+			return AKEY_N;
+		case 'O':
+			return AKEY_O;
+		case 'P':
+			return AKEY_P;
+		case 'Q':
+			return AKEY_Q;
+		case 'R':
+			return AKEY_R;
+		case 'S':
+			return AKEY_S;
+		case 'T':
+			return AKEY_T;
+		case 'U':
+			return AKEY_U;
+		case 'V':
+			return AKEY_V;
+		case 'W':
+			return AKEY_W;
+		case 'X':
+			return AKEY_X;
+		case 'Y':
+			return AKEY_Y;
+		case 'Z':
+			return AKEY_Z;
+		case ':':
+			return AKEY_COLON;
+		case '!':
+			return AKEY_EXCLAMATION;
+		case '@':
+			return AKEY_AT;
+		case '#':
+			return AKEY_HASH;
+		case '$':
+			return AKEY_DOLLAR;
+		case '%':
+			return AKEY_PERCENT;
+		case '^':
+			return AKEY_CARET;
+		case '&':
+			return AKEY_AMPERSAND;
+		case '*':
+			return AKEY_ASTERISK;
+		case '(':
+			return AKEY_PARENLEFT;
+		case ')':
+			return AKEY_PARENRIGHT;
+		case '+':
+			return AKEY_PLUS;
+		case '_':
+			return AKEY_UNDERSCORE;
+		case '"':
+			return AKEY_DBLQUOTE;
+		case '?':
+			return AKEY_QUESTION;
+		case '<':
+			return AKEY_LESS;
+		case '>':
+			return AKEY_GREATER;
+		case 'a':
+			return AKEY_a;
+		case 'b':
+			return AKEY_b;
+		case 'c':
+			return AKEY_c;
+		case 'd':
+			return AKEY_d;
+		case 'e':
+			return AKEY_e;
+		case 'f':
+			return AKEY_f;
+		case 'g':
+			return AKEY_g;
+		case 'h':
+			return AKEY_h;
+		case 'i':
+			return AKEY_i;
+		case 'j':
+			return AKEY_j;
+		case 'k':
+			return AKEY_k;
+		case 'l':
+			return AKEY_l;
+		case 'm':
+			return AKEY_m;
+		case 'n':
+			return AKEY_n;
+		case 'o':
+			return AKEY_o;
+		case 'p':
+			return AKEY_p;
+		case 'q':
+			return AKEY_q;
+		case 'r':
+			return AKEY_r;
+		case 's':
+			return AKEY_s;
+		case 't':
+			return AKEY_t;
+		case 'u':
+			return AKEY_u;
+		case 'v':
+			return AKEY_v;
+		case 'w':
+			return AKEY_w;
+		case 'x':
+			return AKEY_x;
+		case 'y':
+			return AKEY_y;
+		case 'z':
+			return AKEY_z;
+		case ';':
+			return AKEY_SEMICOLON;
+		case '0':
+			return AKEY_0;
+		case '1':
+			return AKEY_1;
+		case '2':
+			return AKEY_2;
+		case '3':
+			return AKEY_3;
+		case '4':
+			return AKEY_4;
+		case '5':
+			return AKEY_5;
+		case '6':
+			return AKEY_6;
+		case '7':
+			return AKEY_7;
+		case '8':
+			return AKEY_8;
+		case '9':
+			return AKEY_9;
+		case ',':
+			return AKEY_COMMA;
+		case '.':
+			return AKEY_FULLSTOP;
+		case '=':
+			return AKEY_EQUAL;
+		case '-':
+			return AKEY_MINUS;
+		case '\'':
+			return AKEY_QUOTE;
+		case '/':
+			return AKEY_SLASH;
+		case '\\':
+			return AKEY_BACKSLASH;
+		case '[':
+			return AKEY_BRACKETLEFT;
+		case ']':
+			return AKEY_BRACKETRIGHT;
+		case '|':
+			return AKEY_BAR;
+		}
 	}
 
 	return AKEY_NONE;
